--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
@@ -1,14 +1,7 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.User.Resources
 @model Zbang.Cloudents.Mvc4WebRole.Models.Gamification
 <div class="badges-wrapper">
-    <div>
-        <span>rank2</span>
-        <md-progress-circular md-mode="determinate" value="{{50}}"></md-progress-circular>
-        <user-image class="img-circle" name="::e.name" image="::e.image" width="35" height="35"></user-image>
-        <span>points</span>
-        <span>username</span>
-        <span>level</span>
-    </div>
+    @Helpers.UserGamification()
     <div class="badges-bar">
         <md-tabs class="badges-tabs" md-dynamic-height="true" md-stretch-tabs="always">
             <md-tab ui-sref="user.badge({type:'level'})" md-active="g.isActive('level')">
