--- a/Zbang.Cloudents.Mvc4WebRole/App_Code/Helpers.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/App_Code/Helpers.cshtml
@@ -1,14 +1,15 @@
-﻿@helper AppInsight() {
+﻿@using Zbang.Cloudents.Mvc4WebRole.Views.User.Resources
+@helper AppInsight()
+{
     <script type='text/javascript'>
-        var appInsights=window.appInsights||function(config)
-        {
-            function r(config){ t[config] = function(){ var i = arguments; t.queue.push(function(){ t[config].apply(t, i)})} }
-            var t = { config:config},u=document,e=window,o='script',s=u.createElement(o),i,f;for(s.src=config.url||'//az416426.vo.msecnd.net/scripts/a/ai.0.js',u.getElementsByTagName(o)[0].parentNode.appendChild(s),t.cookie=u.cookie,t.queue=[],i=['Event','Exception','Metric','PageView','Trace','Ajax'];i.length;)r('track'+i.pop());return r('setAuthenticatedUserContext'),r('clearAuthenticatedUserContext'),config.disableExceptionTracking||(i='onerror',r('_'+i),f=e[i],e[i]=function(config, r, u, e, o) { var s = f && f(config, r, u, e, o); return s !== !0 && t['_' + i](config, r, u, e, o),s}),t
+        var appInsights = window.appInsights || function (config) {
+            function r(config) { t[config] = function () { var i = arguments; t.queue.push(function () { t[config].apply(t, i) }) } }
+            var t = { config: config }, u = document, e = window, o = 'script', s = u.createElement(o), i, f; for (s.src = config.url || '//az416426.vo.msecnd.net/scripts/a/ai.0.js', u.getElementsByTagName(o)[0].parentNode.appendChild(s), t.cookie = u.cookie, t.queue = [], i = ['Event', 'Exception', 'Metric', 'PageView', 'Trace', 'Ajax']; i.length;) r('track' + i.pop()); return r('setAuthenticatedUserContext'), r('clearAuthenticatedUserContext'), config.disableExceptionTracking || (i = 'onerror', r('_' + i), f = e[i], e[i] = function (config, r, u, e, o) { var s = f && f(config, r, u, e, o); return s !== !0 && t['_' + i](config, r, u, e, o), s }), t
         }({
-            instrumentationKey:'7f8df0c1-018b-4f0c-95bc-0441481acf0a'
+            instrumentationKey: '7f8df0c1-018b-4f0c-95bc-0441481acf0a'
         });
 
-        window.appInsights=appInsights;
+        window.appInsights = appInsights;
         appInsights.trackPageView();
     </script>
 // your helper can contain code and/or markup, e.g.
@@ -19,12 +20,22 @@
 
 @helper UserGamification()
 {
-    <div>
-        <span>rank2</span>
-        <md-progress-circular md-mode="determinate" value="{{50}}"></md-progress-circular>
-        <user-image class="img-circle" name="::e.name" image="::e.image" width="35" height="35"></user-image>
-        <span>points</span>
-        <span>username</span>
-        <span>level</span>
+    <div class="gamification-header">
+        <div class="gamification-data">
+            <span class="title">@GamificationResources.Rank</span>
+            <span class="value">38</span>
+        </div>
+        <div class="middle">
+            <div class="image-progress">
+                <md-progress-circular md-mode="determinate" value="50" md-diameter="120px"></md-progress-circular>
+                <user-image class="img-circle" name="::e.name" image="::e.image" width="35" height="110"></user-image>
+            </div>
+            <span class="name">username</span>
+            <span class="level">level</span>
+        </div>
+        <div class="gamification-data">
+            <span class="title">@GamificationResources.Points</span>
+            <span class="value">436</span>
+        </div>
     </div>
 }
