--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/leaderboard.less
@@ -123,8 +123,10 @@
         padding: 16px;
         z-index: 1;
 
-        .image-side img {
-            border: 2px solid @textColorWhite;
+        .image-side {
+            img, .userLetter {
+                border: 2px solid @textColorWhite;
+            }
         }
 
         .data-side {
@@ -282,6 +284,72 @@
         }
     }
 }*/
+.gamification-header {
+    .displayFlex;
+    .align-items(center);
+    .justifyContet(center);
+    background: @gamificationMediumGreen;
+    padding: 20px 0 10px 0;
+
+    .gamification-data {
+        color: @textColorWhite;
+        text-align: center;
+        font-size: 22px;
+        font-weight: bold;
+        margin: 0 34px;
+
+        span {
+            display: block;
+            text-transform: uppercase;
+
+            &.value {
+                color: #d5fcaf;
+            }
+        }
+    }
+
+    .middle {
+        .displayFlex;
+        .align-items(center);
+        flex-direction: column;
+
+        .image-progress {
+            position: relative;
+            position: relative;
+            width: 120px;
+            height: 120px;
+            border-radius: 100%;
+            border: 2px solid @textColorWhite;
+            background: @textColorWhite;
+            overflow: hidden;
+            box-sizing: content-box;
+            margin-bottom: 6px;
+
+            md-progress-circular {
+                stroke: @gamificationYellow;
+            }
+
+            img, .userLetter {
+                position: absolute;
+                top: 0;
+                width: 106px;
+                height: 106px;
+                margin: 7px;
+                border: 2px solid @textColorWhite;
+            }
+        }
+
+        .name,.level{
+            font-size: 14px;
+        }
+        .name{
+            color: @textColorWhite;
+        }
+        .level{
+            color: @gamificationYellow;
+        }
+    }
+}
 
 .community {
     .top {
