--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Feed.cshtml
@@ -98,7 +98,7 @@
                 <div class="actions-wrapper">
                     <div class="indent actions text-capitalize" layout="row" layout-align="start center">
                         <button class="comment-btn" user-not-register-popup="click" type="button" layout="row" layout-align="start center" ng-click="f.reply(post)" ga-track-event="['box-feed', 'comment-icons']">
-                            <span class="comment-icon"><md-icon md-svg-icon="b:comment"></md-icon>@*@Html.Svg("~/images/site/box-icons.svg", "comment")*@</span><span>@BoxResources.Comment</span>
+                            <span class="comment-icon"><md-icon md-svg-icon="b:comment"></md-icon></span><span>@BoxResources.Comment</span>
                         </button>
                         <div layout="row" layout-align="start center">
                             <button class="like-btn" user-not-register-popup="click" type="button" layout="row" layout-align="start center" ng-disabled="f.add.disabled" ng-class="{liked :post.isLiked}" ng-click="f.likeComment(post)" ga-track-event="['box-feed', 'comment-like-icon']">
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <ol class="list-unstyled replies" ng-if="post.replies.length">
-                    <li ng-repeat="reply in post.replies track by reply.id" class="reply" ng-if="post.expandReplies || $index < 4" @*ng-if="$last || post.showReplies"*@>
+                    <li ng-repeat="reply in post.replies track by reply.id" class="reply" ng-if="post.expandReplies || $index < 4">
                         <div class="info">
                             <a ui-sref="user({userId:reply.userId, userName:reply.userName})" layout="row" layout-align="start center" class="userblock username" ga-track-event="['box-feed', 'replyUserNameImg']">
                                 <user-image class="c-img" name="::reply.userName" image="::reply.userImage" width="40" height="40"></user-image>
@@ -152,7 +152,7 @@
                                     <span class="like-count" ng-bind="reply.likesCount"></span>
                                 </button>
                                 <button type="button" ng-disabled="f.add.disabled" ng-click="f.likeReply(reply)" ga-track-event="['box-feed', 'comment-like-icon']" layout="row" layout-align="start center">
-                                    <span class="like-icon"><md-icon md-svg-icon="b:like"></md-icon>@*@Html.Svg("~/images/site/box-icons.svg", "like")*@</span>
+                                    <span class="like-icon"><md-icon md-svg-icon="b:like"></md-icon></span>
                                     <span>@GeneralResources.Like</span>
                                 </button>
                                 <time-ago class="comment-date" from-time="{{::reply.creationTime }}" format="mediumDate"></time-ago>
@@ -173,7 +173,7 @@
                         </div>
                         <div class="reply-actions" layout="row" layout-align="space-between center">
                             <div class="upload-options feed-upload" layout="row" layout-wrap layout-align="space-between start">
-                                <a user-not-register-popup="click" plupload="f.add.fileUpload.url" @*ng-click="f.add.upload(post.id)"*@
+                                <a user-not-register-popup="click" plupload="f.add.fileUpload.url"
                                    plupload-options="f.add.fileUpload.options(post.id)" plupload-callbacks="f.add.fileUpload.callbacks" ga-track-event="['box-feed', 'addFile']">
                                     <md-icon md-svg-icon="u:file" class="file"></md-icon>
                                 </a>
@@ -195,9 +195,9 @@
         </ol>
     </div>
     <div class="boxes-side-area flex" layout-padding flex="100" flex-md="33" flex-lg="30" flex-gt-lg="30">
-        <div flex="100" flex-sm="50" hide-xs class="flex community" ng-controller="Leaderboard as g">
+        <div flex="100" flex-sm="50" hide-xs class="flex community" ng-controller="BoxLeaderboard as g">
+            @Helpers.UserGamification("g.user")
             @* ReSharper disable once Mvc.PartialViewNotResolved *@
-            @Helpers.UserGamification()
             @{ Html.RenderPartial("_LeaderBoard");}
         </div>
     </div>
