user page design changes

--- a/Zbang.Cloudents.Mvc4WebRole/App_Code/Helpers.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/App_Code/Helpers.cshtml
@@ -21,6 +21,8 @@
 @helper UserGamification()
 {
     <div class="gamification-header">
+        <div class="bg-l"></div>
+        <div class="bg-r"></div>
         <div class="gamification-data">
             <span class="title">@GamificationResources.Rank</span>
             <span class="value">38</span>
