--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/profile.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/profile.css
@@ -1,6 +1,6 @@
 ﻿.profile-sidebar {
-  float: left;
-  margin-right: 16px;
+  float: right;
+  margin-left: 16px;
   width: 254px;
 }
 .profile-sidebar .profile-userpic {
