--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/profile.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/profile.less
@@ -3,8 +3,8 @@
 
 
 .profile-sidebar {
-    float: left;
-    margin-right: 16px;
+    float: right;
+    margin-left: 16px;
     width: 254px;
     //background-color: @color4;
     .profile-userpic {
