--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Badges.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.User.Resources
 @model Zbang.Cloudents.Mvc4WebRole.Models.Gamification
 <div class="badges-wrapper">
-    @Helpers.UserGamification()
+    @Helpers.UserGamification("u.leaderboardUser")
     <div class="badges-bar">
         <md-tabs class="badges-tabs" md-dynamic-height="true" md-stretch-tabs="always">
             <md-tab ui-sref="user.badge({type:'level'})" md-active="g.isActive('level')">
@@ -25,8 +25,7 @@
                         @{ string progress = "g.levels.l" + level.Index + ".progress"; }
                         <div class="title">
                             <div class="image">
-                                @*<img ng-if="@progress===0" src="@Url.CdnContent("/images/gamification/level_" + level.Name + "_hidden.png")" alt="@level.Name"/>*@
-                                <img ng-class="{inprogress: progress!==0}" @*ng-if="@progress!==0"*@ src="@Url.CdnContent("/images/gamification/level_" + level.Name + ".png")" alt="@level.Name"/>
+                                <img ng-class="{inprogress: @progress!==0}" src="@Url.CdnContent("/images/gamification/level_" + level.Name + ".png")" alt="@level.Name"/>
                             </div>
                             <div class="name">@level.Name</div>
                         </div>
