--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
@@ -1,37 +1,38 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.User.Resources
 @*<div class="top">
-    <div class="bg-l"></div>
-    <div class="bg-r"></div>
-    <img alt="leaderboard title" class="title" src="@Url.CdnContent("~/Images/Site/Leaderboard-title.png")" />
-</div>*@
+        <div class="bg-l"></div>
+        <div class="bg-r"></div>
+        <img alt="leaderboard title" class="title" src="@Url.CdnContent("~/Images/Site/Leaderboard-title.png")" />
+    </div>*@
 <div class="content">
     @*<div class="filter-wrapper">
-        <button type="button" ng-click="g.goToSelf()" class="action-btn">
-            <span ng-if="!g.leaderboardMyself">@GamificationResources.LeaderboardShowMySelf</span>
-            <span ng-if="g.leaderboardMyself">@GamificationResources.LeaderboardShowAll</span>
-        </button>
+            <button type="button" ng-click="g.goToSelf()" class="action-btn">
+                <span ng-if="!g.leaderboardMyself">@GamificationResources.LeaderboardShowMySelf</span>
+                <span ng-if="g.leaderboardMyself">@GamificationResources.LeaderboardShowAll</span>
+            </button>
 
-    </div>*@
+        </div>*@
     <div class="users" layout="row" layout-padding layout-wrap vs-repeat="94" vs-scroll-parent="window">
         <a ui-sref="user({userId:user.id,userName:user.name})" class="user-data" ng-repeat="user in g.leaderboard track by user.id">
-            <div class="rank" ng-bind="::($index+1 + startIndex)"></div>
+            <div class="rank">
+                <span ng-bind="::($index+1 + startIndex)"></span>
+            </div>
             @*<a class="img-wrapper" >*@
-                <user-image class="img-responsive" name="user.name" image="user.image" width="60" height="60"></user-image>
+            <user-image class="img-circle" name="user.name" image="user.image" width="45" height="45"></user-image>
             @*</a>*@
             <div class="progress-user">
-                <div>
-                    <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{::user.progress}}"></md-progress-linear>
-                    <div class="name ellipsis" ng-bind="::user.name"></div>
-                </div>
-                <div class="text">
-                    <div class="points" ng-bind="::user.score | megaNumber : 2"></div>
-                    <div ng-bind="::user.levelName"></div>
-                    @*<ng-pluralize class="badges" count="user.badges" when="{
-                                                'one': '{} @GamificationResources.Badge',
-                                                'two': '{} @GamificationResources.Badges',
-                                                'other' : '{} @GamificationResources.Badges'
-                                                }"></ng-pluralize>*@
-                </div>
+                <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{::user.progress}}"></md-progress-linear>
+                <div class="name ellipsis" ng-bind="::user.name"></div>
+            </div>
+
+            <div class="text">
+                <div class="points" ng-bind="::user.score | megaNumber : 2"></div>
+                <div ng-bind="::user.levelName"></div>
+                @*<ng-pluralize class="badges" count="user.badges" when="{
+                    'one': '{} @GamificationResources.Badge',
+                    'two': '{} @GamificationResources.Badges',
+                    'other' : '{} @GamificationResources.Badges'
+                    }"></ng-pluralize>*@
             </div>
             @*<div  ng-bind="::user.score"></div>*@
         </a>
