--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_LeaderBoard.cshtml
@@ -22,7 +22,7 @@
             @*</a>*@
             <div class="progress-user">
                 <md-progress-linear class="custom-progress-bar" md-mode="determinate" value="{{::user.progress}}"></md-progress-linear>
-                <div class="name ellipsis" ng-bind="::user.name"></div>
+                <div class="name"><span class="ellipsis" ng-bind="::user.name"></span></div>
             </div>
 
             <div class="text">
